womtool/src/test/resources/validate/wdl_draft3/invalid/importing_omitting_outputs/importing_omitting_outputs.wdl
version 1.0

import "draft3_omitting_outputs.wdl" as oops

workflow importing_omitted_outputs {
  call oops.draft3_omitting_outputs
}
